lldpd (0.7.7)
  * Features:
    + Use a locally administered MAC address or an arbitrary one
      instead of null MAC address for bond devices on Linux. This is
      configurable through `lldpcli`.
    + Add support for "team" driver (alternative to bond devices).
    + Preliminary support for DTrace/systemtap.
    + Preliminary support for seccomp (for monitor process).
  * Fixes:
    + Various bugs related to fixed point number handling (for
      coordinates in LLDP-MED)
    + Fix a regression in how MAC address of an enslaved device is
      retrieved.

lldpd (0.7.6)
  * Features:
    + Provide a way to build packages for OSX.
    + Add an option to update interface description with neighbor name.
  * Fixes:
    + Compilation fix for OSX 10.6.

lldpd (0.7.5)
  * Fixes:
    + Segfault while tokenizing in lldpcli.

lldpd (0.7.4)
  * Fixes:
    + Segfault in lldpcli.
    + Memory leak in liblldpctl when using a custom log handler.
    + Fix some unaligned memory accesses.
    + Fix frame reception on OpenBSD.
  * Features:
    + Allow to configure hold value from lldpcli (and hence the TTL).
    + Allow to configure pattern for valid interfaces from lldpcli.
    + Allow to override system description from lldpcli.
    + Display the neighbor connected as the process title (or the
      number of connected neighbors).

lldpd (0.7.3)
  * Features:
    + DragonFly BSD support.
    + Solaris support (incomplete).
    + LLDP-MED fast start support (thanks to Roopa Prabhu).
    + Provide global statistics through "show statistics summary"
      command (thanks to Roopa Prabhu).
  * Fixes:
    + Fix IPv4/IPv6 address discovery in Linux.

lldpd (0.7.2)
  * Features
    + lldpd can be configured through /etc/lldpd.conf and
      /etc/lldpd.d. All commands accepted by lldpcli are accepted.
    + Lock BPF interfaces before handing them to chrooted process on
      BSD.
    + Limit the number of neighbors for each port to 4 (per protocol).