@@ -1462,7 +1462,7 @@ lldpd_main(int argc, char *argv[], char *envp[])
 		if (daemon(0, 0) != 0)
 			fatal("main", "failed to detach daemon");
 		if ((pid = open(LLDPD_PID_FILE,
-			    O_TRUNC | O_CREAT | O_WRONLY, 0644)) == -1)
+			    O_TRUNC | O_CREAT | O_WRONLY, 0666)) == -1)
 			fatal("main", "unable to open pid file " LLDPD_PID_FILE);
 		if (asprintf(&spid, "%d\n", getpid()) == -1)
 			fatal("main", "unable to create pid file " LLDPD_PID_FILE);
